--- a/PayCenter/src/main/AndroidManifest.xml
+++ b/PayCenter/src/main/AndroidManifest.xml
@@ -3,5 +3,6 @@
     <application>
         <activity android:name=".ui.activity.RechargeActivity"/>
         <activity android:name=".ui.activity.WithdrawActivity"/>
+        <activity android:name=".ui.activity.CashPledgeActivity"/>
     </application>
 </manifest>
