--- a/Baselibrary/build.gradle
+++ b/Baselibrary/build.gradle
@@ -93,6 +93,8 @@ dependencies {
     //环信
     api project(':easeui')
 
+    //WechatPay
+    api 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
 }
 
 //Parcelable序列化插件
