订单详情及订单支付

--- a/GoodsCenter/src/main/AndroidManifest.xml
+++ b/GoodsCenter/src/main/AndroidManifest.xml
@@ -27,5 +27,6 @@
         <activity android:name=".ui.activity.CameramanDetailActivity"/>
         <activity android:name=".ui.activity.StarActivity"/>
         <activity android:name=".ui.activity.BrideInfoActivity"/>
+        <activity android:name=".ui.activity.MealOrderDetailsActivity"/>
     </application>
 </manifest>
