--- a/OrderCenter/src/main/AndroidManifest.xml
+++ b/OrderCenter/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         <activity android:name=".ui.activity.OrderActivity"/>
         <activity android:name=".ui.activity.PayConfirmActivity"/>
         <activity android:name=".ui.activity.CouponActivity"/>
-        <activity android:name=".ui.activity.OrderDetailsActivity"/>
+        <activity android:name=".ui.activity.MealOrderDetailsActivity"/>
         <activity android:name=".ui.activity.RedPacketActivity"/>
     </application>
 </manifest>
