--- a/App/build.gradle
+++ b/App/build.gradle
@@ -31,15 +31,15 @@ android {
         config {
             keyAlias 'ShiGuangMao2019'
             keyPassword 'ShiGuangMao2019'
-            storeFile file('D://android/workspace_jianzhi/keystore/shiguangmao_user.jks')
-//            storeFile file('F://workspace_xilei/keyStore/shiguangmao_user.jks')
+//            storeFile file('D://android/workspace_jianzhi/keystore/shiguangmao_user.jks')
+            storeFile file('F://workspace_xilei/keyStore/shiguangmao_user.jks')
             storePassword 'ShiGuangMao2019'
         }
     }
 
     buildTypes {
         debug {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
         }
