--- a/Baselibrary/build.gradle
+++ b/Baselibrary/build.gradle
@@ -95,7 +95,9 @@ dependencies {
     //WechatPay
     api 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
     //阿里云存储
-    api 'com.aliyun.dpa:oss-android-sdk:2.9.1'
+    api 'com.aliyun.dpa:oss-android-sdk:+'
+    //权限管理
+    api "com.github.tbruyelle:rxpermissions:${rxpermissions_version}"
 }
 
 //Parcelable序列化插件
