--- a/App/build.gradle
+++ b/App/build.gradle
@@ -31,8 +31,8 @@ android {
         config {
             keyAlias 'ShiGuangMao2019'
             keyPassword 'ShiGuangMao2019'
-            storeFile file('D://android/workspace_jianzhi/keystore/shiguangmao_user.jks')
-//            storeFile file('F://workspace_xilei/keyStore/shiguangmao_user.jks')
+//            storeFile file('D://android/workspace_jianzhi/keystore/shiguangmao_user.jks')
+            storeFile file('F://workspace_xilei/keyStore/shiguangmao_user.jks')
             storePassword 'ShiGuangMao2019'
         }
     }
@@ -97,6 +97,7 @@ dependencies {
 
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "com.alibaba:arouter-compiler:$arouter_compiler_version"
+
 }
 
 //Parcelable序列化插件
