--- a/Baselibrary/build.gradle
+++ b/Baselibrary/build.gradle
@@ -60,10 +60,13 @@ dependencies {
     api "com.trello.rxlifecycle2:rxlifecycle-components:$rx_lifecycle_version"
     //Glide
     api "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
     //Circle ImageView
     api "de.hdodenhof:circleimageview:${circle_imageView_version}"
-    //Take Photo
-    api "com.jph.takephoto:takephoto_library:${take_photo_version}"
+    //相册 拍照
+    api("org.devio.takephoto:takephoto_library:$take_photo_version") {
+        exclude group: 'com.github.bumptech.glide'
+    }
     //Alert View
     api "com.bigkoo:alertview:${alert_view_version}"
     //底部导航栏
