--- a/Baselibrary/build.gradle
+++ b/Baselibrary/build.gradle
@@ -65,7 +65,7 @@ dependencies {
     api "com.trello.rxlifecycle2:rxlifecycle-components:$rx_lifecycle_version"
     //Glide
     api "com.github.bumptech.glide:glide:$glide_version"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
     //Circle ImageView
     api "de.hdodenhof:circleimageview:${circle_imageView_version}"
     //相册 拍照
