--- a/App/build.gradle
+++ b/App/build.gradle
@@ -31,8 +31,7 @@ android {
         config {
             keyAlias 'ShiGuangMao2019'
             keyPassword 'ShiGuangMao2019'
-//            storeFile file('D://android/workspace_jianzhi/keystore/shiguangmao_user.jks')
-            storeFile file('F://workspace_xilei/keyStore/shiguangmao_user.jks')
+            storeFile file("${rootDir.getAbsolutePath()}/../keystore/shiguangmao_user.jks")
             storePassword 'ShiGuangMao2019'
         }
     }
